src/test/ui/lifetimes/lifetime-errors/ex2b-push-no-existing-names.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex2b-push-no-existing-names.rs:6:12
   |
LL | fn foo(x: &mut Vec<Ref<i32>>, y: Ref<i32>) {
   |                    --------      -------- these two types are declared with different lifetimes...
LL |     x.push(y);
   |            ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

